--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -2,7 +2,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Arial';
 }
 
 /* style for the board */
